--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+spring.config.import=optional:file:.env[.properties]
 spring.application.name=postcodeapi
+spring.datasource.url=jdbc:mysql://localhost:3306/${DATABASE_NAME}
+spring.datasource.username=${SQL_USER}
+spring.datasource.password=${SQL_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -6,6 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
-spring.app.jwtExpirationMs=3000000000000000
+spring.app.jwtSecret=${JWT_SECRET}
+spring.app.jwtExpirationMs=${JWT_EXPIRY}
 server.port=8081
